--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,13 @@ a:visited {
 ul {
   list-style: none; }
 
+@-webkit-keyframes fullhaert {
+  0% {
+    transform: scale(0);
+    fill-opacity: 0; }
+  100% {
+    transform: scale(1);
+    fill-opacity: 1; } }
 @keyframes fullhaert {
   0% {
     transform: scale(0);
@@ -50,13 +57,16 @@ ul {
   border: 3px solid transparent;
   border-top: 3px solid #FF79DA;
   border-radius: 50%;
+  -webkit-animation: spin linear 3s;
   animation: spin linear 3s;
+  -webkit-animation-duration: 1.5s;
   animation-duration: 1.5s; }
   .load::before, .load::after {
     position: absolute;
     border: 3px solid transparent;
     border-top: 3px solid #FF79DA;
     border-radius: 50%;
+    -webkit-animation: spin linear 3;
     animation: spin linear 3;
     content: ''; }
 
@@ -65,6 +75,7 @@ ul {
   width: 75px;
   top: 10px;
   left: 10px;
+  -webkit-animation-duration: 1.5s;
   animation-duration: 1.5s; }
 
 .load::after {
@@ -72,8 +83,16 @@ ul {
   width: 50px;
   top: 22px;
   left: 22px;
+  -webkit-animation-duration: 1.5s;
   animation-duration: 1.5s; }
 
+@-webkit-keyframes spin {
+  from {
+    opacity: 1;
+    transform: rotateZ(360deg); }
+  to {
+    opacity: 1;
+    transform: rotateZ(0deg); } }
 @keyframes spin {
   from {
     opacity: 1;
@@ -81,6 +100,11 @@ ul {
   to {
     opacity: 1;
     transform: rotateZ(0deg); } }
+@-webkit-keyframes loading {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 @keyframes loading {
   0% {
     opacity: 0; }
@@ -88,14 +112,18 @@ ul {
     opacity: 1; } }
 .init {
   opacity: 0;
+  -webkit-animation-name: loading;
   animation-name: loading;
+  -webkit-animation-delay: 2s;
   animation-delay: 2s;
+  -webkit-animation-duration: 0ms;
   animation-duration: 0ms;
+  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards; }
 
 .logo {
   width: 70%;
-  font-family: "Shrikhand";
+  font-family: Shrikhand, sans-serif;
   text-align: center;
   margin-left: 15%;
   margin-top: 20px; }
@@ -124,7 +152,7 @@ ul {
     left: 50%;
     transform: translate(-50%); }
     .accueil__titre > h1 {
-      font-family: "Shrikhand";
+      font-family: Shrikhand, sans-serif;
       font-size: 20px;
       font-weight: bold; }
   .accueil__soustitre {
@@ -168,7 +196,7 @@ ul {
         bottom: 1%;
         z-index: 2; }
       .nav span {
-        font-size: 13px; } }
+        font-size: 12px; } }
   @media screen and (min-width: 600px) {
     .nav {
       display: flex;
@@ -184,7 +212,7 @@ ul {
         z-index: 2; } }
   .nav__titre {
     margin-left: 20px;
-    font-family: "Shrikhand"; }
+    font-family: Shrikhand, sans-serif; }
 
 .c-nav {
   width: 100%;
@@ -195,7 +223,7 @@ ul {
   flex-wrap: nowrap;
   font-size: 12px;
   font-weight: bold;
-  font-family: "Roboto", sans-serif; }
+  font-family: Roboto, sans-serif; }
 
 .nav__btn {
   cursor: pointer;
@@ -267,7 +295,7 @@ ul {
   .container-card__titre {
     padding-top: 20px;
     margin-left: 20px;
-    font-family: "Shrikhand"; }
+    font-family: Shrikhand, sans-serif; }
   .container-card--rest {
     width: 90%;
     display: flex;
@@ -312,6 +340,7 @@ ul {
 .card-rest img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
   object-fit: cover; }
 
 .cardbody {
@@ -353,9 +382,13 @@ ul {
   display: none; }
 
 .btnhaert:checked + label > .ico {
+  -webkit-animation-name: fullhaert;
   animation-name: fullhaert;
+  -webkit-animation-duration: 700ms;
   animation-duration: 700ms;
+  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
+  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out; }
 
 /* revisarrrrrrrr---------------*/
@@ -370,11 +403,10 @@ button {
   height: 200px;
   overflow: hidden;
   background: #333333;
-  margin-bottom: 20px;
   text-align: left;
   line-height: 1; }
   .fpage .titre {
-    font-family: "Shrikhand";
+    font-family: Shrikhand, sans-serif;
     margin-left: 35px;
     padding-top: 5px;
     font-size: 14px;
@@ -391,6 +423,13 @@ button {
     color: #FFFFFF; }
 
 /*---------------menu restaurants----------------------------*/
+@-webkit-keyframes fadein {
+  0% {
+    transform: translatey(20px);
+    opacity: 0; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
 @keyframes fadein {
   0% {
     transform: translatey(20px);
@@ -425,6 +464,7 @@ button {
   width: 100%; }
   .img-rest img {
     width: 100%;
+    -o-object-fit: cover;
     object-fit: cover; }
 
 .rest-cart {
@@ -446,7 +486,7 @@ button {
     align-items: baseline; }
     .rest-cart__name h2 {
       font-size: 2rem;
-      font-family: 'Shrikhand';
+      font-family: Shrikhand, sans-serif;
       font-style: italic;
       font-weight: bold;
       margin-left: 5px; }
@@ -472,7 +512,7 @@ button {
     width: 100%;
     margin-left: 10px;
     font-size: 12px;
-    font-family: "Roboto", sans-serif;
+    font-family: Roboto, sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: baseline;
@@ -527,7 +567,13 @@ button {
     .btn-rest {
       width: 90%; }
       .btn-rest .restaurant__span {
-        margin-right: 30px; } }
+        margin-right: 30px;
+        font-size: 12px;
+        margin-left: 0; }
+      .btn-rest .p-cart {
+        width: 100%;
+        font-size: 12px;
+        text-align: left; } }
   @media screen and (min-width: 600px) and (max-width: 997px) {
     .btn-rest {
       width: 60%;
@@ -535,7 +581,7 @@ button {
       left: 50%;
       transform: translate(-50%); } }
   .btn-rest__titre {
-    font-family: "Roboto", sans-serif;
+    font-family: Roboto, sans-serif;
     font-size: 14px;
     margin-left: 10px;
     font-weight: bold; }
@@ -575,20 +621,25 @@ svg {
   transition: all 900ms cubic-bezier(0.32, 0, 0.07, 1); }
 
 .c--efect-btn {
+  -webkit-animation-name: fadein;
   animation-name: fadein;
+  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
+  -webkit-animation-timing-function: cubic-bezier(0.19, -0.06, 0.79, 0.96);
   animation-timing-function: cubic-bezier(0.19, -0.06, 0.79, 0.96);
   opacity: 0; }
   .c--efect-btn--1 {
+    -webkit-animation-duration: 1000ms;
     animation-duration: 1000ms; }
   .c--efect-btn--2 {
+    -webkit-animation-delay: 1000ms;
     animation-delay: 1000ms;
+    -webkit-animation-duration: 1000ms;
     animation-duration: 1000ms; }
   .c--efect-btn--3 {
+    -webkit-animation-delay: 2000ms;
     animation-delay: 2000ms;
+    -webkit-animation-duration: 1000ms;
     animation-duration: 1000ms; }
-
-.c--fpage {
-  margin-bottom: -2%; }
 
 /*# sourceMappingURL=style.css.map */
