--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,47 @@ ul {
           width: 40%;
           margin: 20px; } }
 
+.nouveau {
+  width: 100px;
+  text-align: center;
+  position: absolute;
+  top: 2%;
+  left: 63%;
+  right: 0;
+  border-radius: 4px/4px;
+  background-color: #99E2D0;
+  color: #278870; }
+  @media screen and (min-width: 998px) {
+    .nouveau {
+      top: 8%;
+      left: 35%; } }
+  @media screen and (min-width: 600px) and (max-width: 997px) {
+    .nouveau {
+      top: 8%;
+      left: 30%; } }
+  .nouveau__p {
+    font-weight: bold; }
+
+.nouveau2 {
+  width: 100px;
+  text-align: center;
+  position: absolute;
+  top: 27%;
+  left: 63%;
+  border-radius: 4px/4px;
+  background-color: #99E2D0;
+  color: #278870; }
+  @media screen and (min-width: 998px) {
+    .nouveau2 {
+      top: 8%;
+      left: 82%; } }
+  @media screen and (min-width: 600px) and (max-width: 997px) {
+    .nouveau2 {
+      top: 8%;
+      left: 79%; } }
+  .nouveau2__p {
+    font-weight: bold; }
+
 .card-rest {
   padding: 0;
   margin: 0;
@@ -423,13 +464,6 @@ button {
     color: #FFFFFF; }
 
 /*---------------menu restaurants----------------------------*/
-@-webkit-keyframes fadein {
-  0% {
-    transform: translatey(20px);
-    opacity: 0; }
-  100% {
-    transform: translateY(0);
-    opacity: 1; } }
 @keyframes fadein {
   0% {
     transform: translatey(20px);
@@ -461,10 +495,17 @@ button {
 
 .img-rest {
   margin-top: 20px;
-  width: 100%; }
+  width: 100%;
+  height: 250px; }
+  @media screen and (min-width: 998px) {
+    .img-rest {
+      height: 700px; } }
+  @media screen and (min-width: 600px) and (max-width: 997px) {
+    .img-rest {
+      height: 500px; } }
   .img-rest img {
     width: 100%;
-    -o-object-fit: cover;
+    height: 100%;
     object-fit: cover; }
 
 .rest-cart {
@@ -482,14 +523,15 @@ button {
     padding-left: 10px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: baseline; }
     .rest-cart__name h2 {
       font-size: 2rem;
       font-family: Shrikhand, sans-serif;
       font-style: italic;
       font-weight: bold;
-      margin-left: 5px; }
+      margin-left: 5px;
+      margin-right: 15px; }
     .rest-cart__name .ico {
       position: relative;
       top: 3px; }
@@ -522,9 +564,10 @@ button {
   .restaurant__span {
     display: inline-block;
     text-align: center;
-    width: 7vh;
+    width: 4vh;
     padding-top: 5px;
     padding-left: 10px;
+    padding-right: 10px;
     padding-bottom: 5px;
     background-color: #FFFFFF;
     font-weight: bold;
@@ -536,6 +579,28 @@ button {
   .restaurant--btn {
     margin-top: 20px;
     text-align: center; }
+
+@media screen and (min-width: 998px) {
+  .entrees {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%); } }
+
+.p-cart {
+  overflow-y: hidden;
+  align-self: center;
+  height: 12px;
+  width: 250px;
+  overflow-x: hidden;
+  line-height: 1;
+  transition: all 750ms cubic-bezier(0.32, 0, 0.07, 1);
+  position: relative;
+  z-index: 2; }
 
 .t-cart {
   display: inline-block;
@@ -550,6 +615,12 @@ button {
 
 .menu {
   width: 90%; }
+
+@media screen and (min-width: 998px) {
+  .menu-entree {
+    width: 35%; }
+    .menu-entree .restaurant__span {
+      margin-right: 30px; } }
 
 .btn-rest {
   width: 100%;
@@ -585,9 +656,27 @@ button {
     font-size: 14px;
     margin-left: 10px;
     font-weight: bold; }
+  @media screen and (max-width: 390px) {
+    .btn-rest:hover .p-cart {
+      width: 199px; }
+    .btn-rest:hover .cartalarga {
+      width: 6vh; }
+      .btn-rest:hover .cartalarga::before {
+        padding: 0;
+        margin: 0;
+        content: "...";
+        position: relative;
+        right: 5%;
+        opacity: 0;
+        transform-origin: 100%;
+        animation-name: points;
+        animation-delay: 750ms;
+        animation-timing-function: cubic-bezier(0.32, 0, 0.07, 1);
+        animation-fill-mode: forwards; } }
   .btn-rest:hover .restaurant__span {
     transform: translateX(-8.4vh); }
   .btn-rest:hover .__check {
+    opacity: 1;
     transform: translateX(-220%) rotate(360deg); }
   .btn-rest:hover::after {
     opacity: 1;
@@ -600,6 +689,7 @@ button {
     right: 0;
     bottom: 0;
     left: 0;
+    margin-left: 10px;
     border-radius: 20px 20px 20px 20px;
     background-color: #99E2D0;
     opacity: 0;
@@ -612,6 +702,7 @@ svg {
   width: 1.2rem; }
 
 .__check {
+  opacity: 0;
   display: inline-block;
   fill: #FFFFFF;
   position: relative;
@@ -620,26 +711,23 @@ svg {
   z-index: 3;
   transition: all 900ms cubic-bezier(0.32, 0, 0.07, 1); }
 
+@keyframes points {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 .c--efect-btn {
-  -webkit-animation-name: fadein;
   animation-name: fadein;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-timing-function: cubic-bezier(0.19, -0.06, 0.79, 0.96);
   animation-timing-function: cubic-bezier(0.19, -0.06, 0.79, 0.96);
   opacity: 0; }
   .c--efect-btn--1 {
-    -webkit-animation-duration: 1000ms;
     animation-duration: 1000ms; }
   .c--efect-btn--2 {
-    -webkit-animation-delay: 1000ms;
     animation-delay: 1000ms;
-    -webkit-animation-duration: 1000ms;
     animation-duration: 1000ms; }
   .c--efect-btn--3 {
-    -webkit-animation-delay: 2000ms;
     animation-delay: 2000ms;
-    -webkit-animation-duration: 1000ms;
     animation-duration: 1000ms; }
 
 /*# sourceMappingURL=style.css.map */
