--- a/public/main.scss
+++ b/public/main.scss
@@ -127,6 +127,40 @@ $border-btn: 20px 20px 20px 20px;
        
     }
 }
+@mixin entreedescktop {
+    @media screen and (min-width: 998px) {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items:center;
+        flex-wrap: wrap;
+        position: relative;
+        left: 50%;
+        transform: translate(-50%);
+       
+    }
+}
+@mixin btnentree{
+    @media  screen and (min-width: 998px) {
+         width: 35%;
+         .restaurant__span{
+             margin-right: 30px;}
+            
+    }
+    }
+@mixin menu-imgdescktop{
+        @media screen and (min-width: 998px) {
+           
+            height: 700px;
+         }
+         
+     }
+ @mixin menu-imgtablet {
+        @media screen and (min-width: 600px) and (max-width: 997px) {
+         height: 500px;
+        }
+        
+    }
 @mixin descktop-menubtn {
     @media screen and (min-width: 998px) {
        width: 90%;
@@ -163,6 +197,30 @@ $border-btn: 20px 20px 20px 20px;
     }
     
 }
+@mixin cartel-descktop{
+    @media screen and (min-width: 998px){
+        top: 8%;
+        left: 35%;
+    }
+}
+@mixin cartel2-descktop{
+    @media screen and (min-width: 998px){
+        top: 8%;
+        left: 82%;
+    }
+}
+@mixin cartel-tablet{
+    @media screen and (min-width: 600px) and (max-width: 997px){
+        top: 8%;
+        left: 30%;
+    }
+}
+@mixin cartel2-tablet{
+    @media screen and (min-width: 600px) and (max-width: 997px){
+        top: 8%;
+        left: 79%;
+    }
+}
 @mixin boxshadow{
     box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.20);
 }
@@ -190,6 +248,7 @@ $border-btn: 20px 20px 20px 20px;
         right: 0;
         bottom: 0;
         left: 0;
+        margin-left: 10px;
         border-radius:$border-btn;
         background-color: #99E2D0;
         opacity:0;
@@ -211,6 +270,33 @@ $border-btn: 20px 20px 20px 20px;
         opacity:1;
         z-index: 1;
         transition: opacity 250ms;
+    }
+    @mixin cartalarga{
+        @media screen and (max-width: 390px) {
+    
+            .p-cart{
+                width:199px;
+            }
+          
+            .cartalarga{
+                width: 6vh;
+                
+                &::before{
+                    padding: 0;
+                    margin: 0;
+                    content: "...";
+                    position: relative;
+                    right: 5%;
+                    opacity: 0;   
+                    transform-origin: 100%;            
+                    animation-name: points ;
+                    animation-delay: 750ms;
+                    animation-timing-function: cubic-bezier(.32,0,.07,1);
+                    animation-fill-mode: forwards;
+                    
+                }
+            }
+        }   
     }
 @mixin btn-color {  
      background:linear-gradient(0deg,lighten($color-primaire,5),60%,$color-secondaire);
@@ -527,6 +613,39 @@ $border-btn: 20px 20px 20px 20px;
        @include descktop--rest;
    }
 }
+.nouveau{
+    @include cartel-descktop;
+    @include cartel-tablet;
+    width: 100px;
+    text-align: center;
+    position:absolute;  
+    top: 2%;
+    left: 63%;
+    right: 0;
+    border-radius: 4px/4px;
+    background-color: $color-tertiaire;
+    color: darken($color-tertiaire, 40%);
+    &__p{
+        font-weight: bold;
+    }
+
+}
+.nouveau2 {
+    @include cartel2-descktop;
+    @include cartel2-tablet;
+    width: 100px;
+    text-align: center;
+    position:absolute;  
+    top: 27%;
+    left: 63%;
+    border-radius: 4px/4px;
+    background-color: $color-tertiaire;
+    color: darken($color-tertiaire, 40%);
+&__p{
+    font-weight: bold;
+}
+
+}
 .card-rest
 {
     padding: 0;
@@ -658,17 +777,7 @@ button{
 } 
 
 /*---------------menu restaurants----------------------------*/
-@-webkit-keyframes fadein{
-    0%{
-        transform:translatey(20px);
-        opacity: 0;
-    }
-    
-    100%{
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
+
 @keyframes fadein{
     0%{
         transform:translatey(20px);
@@ -700,23 +809,29 @@ button{
     }
     
 }
+
 .btn-return {
     position: relative;
     left: 5%;
     top: 35%;
    }
 .img-rest{
+    @include menu-imgdescktop;
+    @include menu-imgtablet;
     margin-top: 20px;
-    width: 100%;  
+    width: 100%;
+    height: 250px; 
     img{
+        
         width: 100%;
-        -o-object-fit: cover;
-           object-fit: cover;
+        height: 100%;
+        object-fit: cover;
         
     }
 }
 .rest-cart
 {
+    
     width: 100%;
     height: auto;
     margin-top: -15%;
@@ -727,13 +842,16 @@ button{
     z-index: 1;    
 
     &__name{
-        width: 90%;
+        width: 90%;        
         padding-top: 10px;
-        padding-left: 10px;
+        padding-left: 10px;        
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
         align-items: baseline;
+       
+        
+        
 
         h2{
             font-size: 2rem;
@@ -741,6 +859,7 @@ button{
             font-style: italic;
             font-weight: bold;
             margin-left: 5px;
+            margin-right: 15px;
         }
         
         .ico{
@@ -773,11 +892,12 @@ button{
         &__span{
                     display: inline-block;
                     text-align: center;
-                    width: 7vh;
+                    width: 4vh;
                     padding-top: 5px;
                     padding-left: 10px;
+                    padding-right: 10px;
                     padding-bottom: 5px;
-                    background-color: #FFFFFF;
+                    background-color:#FFFFFF;
                     font-weight: bold;
                     font-size:12px;
                     position: relative;
@@ -790,6 +910,21 @@ button{
            margin-top: 20px;
            text-align: center;
         }
+    
+}
+.entrees{
+    @include entreedescktop;
+}
+.p-cart{
+    overflow-y: hidden;
+    align-self: center;
+    height: 12px;
+    width: 250px;
+    overflow-x: hidden;
+    line-height: 1;
+    transition: all 750ms cubic-bezier(.32,0,.07,1);
+    position: relative;
+    z-index: 2;
     
 }
 .t-cart{
@@ -810,6 +945,10 @@ button{
     width: 90%;
    
 }
+.menu-entree{
+    @include btnentree;
+}
+
 .btn-rest
 {
     @include descktop-menubtn;
@@ -834,11 +973,14 @@ button{
 
     }
     &:hover{
+        @include cartalarga;
         .restaurant__span{
+            
             transform: translateX(-8.4vh);
             
         }
         .__check{
+            opacity: 1;
             transform:  translateX(-220%) rotate(360deg);
             }
         
@@ -859,6 +1001,7 @@ svg{
     width: 1.2rem;
 }
 .__check{
+        opacity: 0;
         display: inline-block;
         fill:#FFFFFF;
         position: relative;
@@ -869,30 +1012,35 @@ svg{
         
 }
 
-
+@keyframes points {
+    0%{
+        opacity: 0;
+      
+    }
+    100%{
+        opacity: 1;
+    }
+    
+}
 
 .c--efect-btn{
-    -webkit-animation-name: fadein;
             animation-name: fadein;
-    -webkit-animation-fill-mode: forwards;
             animation-fill-mode: forwards;
-    -webkit-animation-timing-function: cubic-bezier(.19, -0.06, .79, .96);
+    
             animation-timing-function: cubic-bezier(.19, -0.06, .79, .96);
     opacity: 0;
     &--1{
-        -webkit-animation-duration: 1000ms;
+        
                 animation-duration: 1000ms;
     }
     &--2{
-        -webkit-animation-delay: 1000ms;
-                animation-delay: 1000ms;
-        -webkit-animation-duration: 1000ms;
+        
+                animation-delay: 1000ms;        
                 animation-duration: 1000ms;
     }
     &--3{
-        -webkit-animation-delay: 2000ms;
-                animation-delay: 2000ms;
-        -webkit-animation-duration: 1000ms;
+       
+                animation-delay: 2000ms;       
                 animation-duration: 1000ms;
     }
 
