--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "Shrikhand";
   src: url("css/Shrikhand/Shrikhand-Regular.ttf") format("ttf");
@@ -29,13 +30,7 @@ a:visited {
 ul {
   list-style: none; }
 
-@-webkit-keyframes fullhaert {
-  0% {
-    transform: scale(0);
-    fill-opacity: 0; }
-  100% {
-    transform: scale(1);
-    fill-opacity: 1; } }
+/*-----animation de remplissage du cœur-----*/
 @keyframes fullhaert {
   0% {
     transform: scale(0);
@@ -43,56 +38,7 @@ ul {
   100% {
     transform: scale(1);
     fill-opacity: 1; } }
-/*--------------animation spinner----*/
-.load {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 40%;
-  opacity: 0;
-  margin: auto;
-  height: 100px;
-  width: 100px;
-  border: 3px solid transparent;
-  border-top: 3px solid #FF79DA;
-  border-radius: 50%;
-  -webkit-animation: spin linear 3s;
-  animation: spin linear 3s;
-  -webkit-animation-duration: 1.5s;
-  animation-duration: 1.5s; }
-  .load::before, .load::after {
-    position: absolute;
-    border: 3px solid transparent;
-    border-top: 3px solid #FF79DA;
-    border-radius: 50%;
-    -webkit-animation: spin linear 3;
-    animation: spin linear 3;
-    content: ''; }
-
-.load::before {
-  height: 75px;
-  width: 75px;
-  top: 10px;
-  left: 10px;
-  -webkit-animation-duration: 1.5s;
-  animation-duration: 1.5s; }
-
-.load::after {
-  height: 50px;
-  width: 50px;
-  top: 22px;
-  left: 22px;
-  -webkit-animation-duration: 1.5s;
-  animation-duration: 1.5s; }
-
-@-webkit-keyframes spin {
-  from {
-    opacity: 1;
-    transform: rotateZ(360deg); }
-  to {
-    opacity: 1;
-    transform: rotateZ(0deg); } }
+/*------animation sipnner o loading -----*/
 @keyframes spin {
   from {
     opacity: 1;
@@ -100,71 +46,25 @@ ul {
   to {
     opacity: 1;
     transform: rotateZ(0deg); } }
-@-webkit-keyframes loading {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
 @keyframes loading {
   0% {
     opacity: 0; }
   100% {
     opacity: 1; } }
-.init {
-  opacity: 0;
-  -webkit-animation-name: loading;
-  animation-name: loading;
-  -webkit-animation-delay: 2s;
-  animation-delay: 2s;
-  -webkit-animation-duration: 0ms;
-  animation-duration: 0ms;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards; }
-
-.logo {
-  width: 70%;
-  font-family: Shrikhand, sans-serif;
-  text-align: center;
-  margin-left: 15%;
-  margin-top: 20px; }
-
-.accueil {
-  width: 100%;
-  background-color: #F2F2F2;
-  padding-bottom: 20px;
-  text-align: center; }
-  .accueil__location {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-    background-color: #d9d9d9;
-    box-shadow: inset 0px 5px 0px rgba(0, 0, 0, 0.1); }
-    .accueil__location__titre {
-      font-size: 11px;
-      margin-left: 10px;
-      color: #737373; }
-  .accueil__titre {
-    width: 55%;
-    font-size: 14px;
-    margin-bottom: 20px;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%); }
-    .accueil__titre > h1 {
-      font-family: Shrikhand, sans-serif;
-      font-size: 20px;
-      font-weight: bold; }
-  .accueil__soustitre {
-    width: 80%;
-    font-size: 10px;
-    margin-bottom: 20px;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%); }
-    .accueil__soustitre > h2 {
-      font-weight: normal; }
-
+/*----animation des buttons de menu----*/
+@keyframes fadein {
+  0% {
+    transform: translatey(20px);
+    opacity: 0; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
+/*-----animation pour les tres point----*/
+@keyframes points {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 .accueil__btn {
   cursor: pointer;
   padding: 5px;
@@ -174,57 +74,22 @@ ul {
   border: 0;
   background: linear-gradient(0deg, #a16be0, 60%, #FF79DA);
   box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.2);
-  border-radius: 20px/20px; }
+  border-radius: 20px/20px;
+  transition: all 250ms; }
   @media screen and (min-width: 600px) {
     .accueil__btn {
       width: 22%; } }
+  .accueil__btn:hover {
+    opacity: 0.6; }
 
-.nav {
-  width: 100%; }
-  @media screen and (min-width: 998px) {
-    .nav {
-      height: 170px;
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-      flex-wrap: nowrap; }
-      .nav .nav__btn {
-        width: 80%; }
-      .nav .nav__btn--i {
-        position: relative;
-        left: 10%;
-        bottom: 1%;
-        z-index: 2; }
-      .nav span {
-        font-size: 12px; } }
-  @media screen and (min-width: 600px) {
-    .nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-      flex-wrap: nowrap; }
-      .nav .nav__btn {
-        width: 80%; }
-      .nav .nav__btn--i {
-        position: relative;
-        left: 10%;
-        bottom: 1%;
-        z-index: 2; } }
-  .nav__titre {
-    margin-left: 20px;
-    font-family: Shrikhand, sans-serif; }
-
-.c-nav {
-  width: 100%;
-  display: flex;
-  align-items: baseline; }
-
+/*buttons de nav text*/
 .navbtn {
   flex-wrap: nowrap;
   font-size: 12px;
   font-weight: bold;
   font-family: Roboto, sans-serif; }
 
+/*buttons avec de icons*/
 .nav__btn {
   cursor: pointer;
   display: flex;
@@ -283,6 +148,176 @@ ul {
     z-index: 2; }
   .nav__btn--icon {
     color: gray; }
+
+/*buttons de cœur*/
+.btnhaert {
+  display: none; }
+
+.btnhaert:checked + label > .ico {
+  animation-name: fullhaert;
+  animation-duration: 700ms;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out; }
+
+/*suppression des bordures de boutons*/
+button {
+  background: none;
+  border: 0;
+  cursor: pointer; }
+
+.btn-return {
+  position: relative;
+  left: 5%;
+  top: 35%; }
+
+.menu {
+  width: 90%; }
+
+/* buttons de rest avec la animation de check*/
+.btn-rest {
+  width: 100%;
+  height: 70px;
+  overflow: hidden;
+  margin-left: 20px;
+  text-align: left;
+  background-color: #FFFFFF;
+  margin-bottom: 20px;
+  border-radius: 20px 20px 20px 20px;
+  line-height: 0.5;
+  position: relative;
+  z-index: 1; }
+  @media screen and (min-width: 998px) {
+    .btn-rest {
+      width: 90%; }
+      .btn-rest .restaurant__span {
+        margin-right: 30px;
+        font-size: 12px;
+        margin-left: 0; }
+      .btn-rest .p-cart {
+        width: 100%;
+        font-size: 12px;
+        text-align: left; } }
+  @media screen and (min-width: 600px) and (max-width: 997px) {
+    .btn-rest {
+      width: 60%;
+      position: relative;
+      left: 50%;
+      transform: translate(-50%); } }
+  .btn-rest__titre {
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    margin-left: 10px;
+    font-weight: bold; }
+  @media screen and (max-width: 390px) {
+    .btn-rest:hover .p-cart {
+      width: 199px; }
+    .btn-rest:hover .cart-large {
+      width: 6vh; }
+      .btn-rest:hover .cart-large::before {
+        padding: 0;
+        margin: 0;
+        content: "...";
+        position: relative;
+        right: 5%;
+        opacity: 0;
+        transform-origin: 100%;
+        animation-name: points;
+        animation-delay: 750ms;
+        animation-timing-function: cubic-bezier(0.32, 0, 0.07, 1);
+        animation-fill-mode: forwards; } }
+  .btn-rest:hover .restaurant__span {
+    transform: translateX(-8.4vh); }
+  .btn-rest:hover .__check {
+    opacity: 1;
+    transform: translateX(-220%) rotate(360deg); }
+  .btn-rest:hover::after {
+    opacity: 1;
+    transform-origin: 100%;
+    transform: scaleX(0.197); }
+  .btn-rest::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin-left: 10px;
+    border-radius: 20px 20px 20px 20px;
+    background-color: #99E2D0;
+    opacity: 0;
+    z-index: 2;
+    transform: scaleX(0);
+    transform-origin: 100%;
+    transition: all 900ms cubic-bezier(0.32, 0, 0.07, 1); }
+
+/* duration et delay des buttons de menu (fadein)*/
+.c--efect-btn {
+  animation-name: fadein;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.19, -0.06, 0.79, 0.96);
+  opacity: 0; }
+  .c--efect-btn--1 {
+    animation-duration: 1000ms; }
+  .c--efect-btn--2 {
+    animation-delay: 1000ms;
+    animation-duration: 1000ms; }
+  .c--efect-btn--3 {
+    animation-delay: 2000ms;
+    animation-duration: 1000ms; }
+
+/*définition de l'icône du cœur */
+.ico {
+  cursor: pointer;
+  fill: url(#myGradient);
+  fill-opacity: 0;
+  stroke-width: 1rem;
+  stroke: #000000;
+  width: 1.5rem;
+  height: 1.5rem;
+  position: relative;
+  top: 10px; }
+
+/*bloc div de input et icon du cœur*/
+.haert {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  left: 90%;
+  transform: translateY(-35px);
+  z-index: 2; }
+
+svg {
+  width: 1.2rem; }
+
+/*icon de check mark*/
+.__check {
+  opacity: 0;
+  display: inline-block;
+  fill: #FFFFFF;
+  position: relative;
+  bottom: 15%;
+  left: 100%;
+  z-index: 3;
+  transition: all 900ms cubic-bezier(0.32, 0, 0.07, 1); }
+
+/*----CARD REST ACCUEIL----*/
+.logo-btn {
+  margin-top: 20px;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center; }
+  .logo-btn .logo {
+    position: relative;
+    right: 15%;
+    width: 60%; }
+    @media screen and (min-width: 998px) {
+      .logo-btn .logo .logo {
+        width: 60%;
+        margin-top: 30px;
+        margin-bottom: 20px; } }
 
 .container-card {
   width: 100%;
@@ -399,100 +434,7 @@ ul {
   .cardbody .ico {
     margin-right: 5px; }
 
-.ico {
-  cursor: pointer;
-  fill: url(#myGradient);
-  fill-opacity: 0;
-  stroke-width: 1rem;
-  stroke: #000000;
-  width: 1.5rem;
-  height: 1.5rem;
-  position: relative;
-  top: 10px; }
-
-.haert {
-  display: inline-block;
-  padding: 0;
-  margin: 0;
-  position: relative;
-  left: 90%;
-  transform: translateY(-35px);
-  z-index: 2; }
-
-.btnhaert {
-  display: none; }
-
-.btnhaert:checked + label > .ico {
-  -webkit-animation-name: fullhaert;
-  animation-name: fullhaert;
-  -webkit-animation-duration: 700ms;
-  animation-duration: 700ms;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out; }
-
-/* revisarrrrrrrr---------------*/
-button {
-  background: none;
-  border: 0;
-  cursor: pointer; }
-
-/*----------------------------------------*/
-.fpage {
-  width: 100%;
-  height: 200px;
-  overflow: hidden;
-  background: #333333;
-  text-align: left;
-  line-height: 1; }
-  .fpage .titre {
-    font-family: Shrikhand, sans-serif;
-    margin-left: 35px;
-    padding-top: 5px;
-    font-size: 14px;
-    color: #FFFFFF; }
-  .fpage .__links {
-    color: #FFFFFF;
-    font-size: 12px; }
-
-.links {
-  margin-bottom: 10px; }
-  .links i {
-    margin-right: 15px; }
-  .links a {
-    color: #FFFFFF; }
-
-/*---------------menu restaurants----------------------------*/
-@keyframes fadein {
-  0% {
-    transform: translatey(20px);
-    opacity: 0; }
-  100% {
-    transform: translateY(0);
-    opacity: 1; } }
-.logo-btn {
-  margin-top: 20px;
-  width: 100%;
-  height: 30px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center; }
-  .logo-btn .logo {
-    position: relative;
-    right: 15%;
-    width: 60%; }
-    @media screen and (min-width: 998px) {
-      .logo-btn .logo .logo {
-        width: 60%;
-        margin-top: 30px;
-        margin-bottom: 20px; } }
-
-.btn-return {
-  position: relative;
-  left: 5%;
-  top: 35%; }
-
+/*---CARD  REST  MENU ------*/
 .img-rest {
   margin-top: 20px;
   width: 100%;
@@ -536,6 +478,7 @@ button {
       position: relative;
       top: 3px; }
 
+/*bloc de buttons de menu de restaurant*/
 .restaurant {
   text-align: left;
   width: 100%;
@@ -580,6 +523,168 @@ button {
     margin-top: 20px;
     text-align: center; }
 
+.load {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 40%;
+  opacity: 0;
+  margin: auto;
+  height: 100px;
+  width: 100px;
+  border: 3px solid transparent;
+  border-top: 3px solid #FF79DA;
+  border-radius: 50%;
+  -webkit-animation: spin linear 3s;
+  animation: spin linear 3s;
+  -webkit-animation-duration: 1.5s;
+  animation-duration: 1.5s; }
+  .load::before, .load::after {
+    position: absolute;
+    border: 3px solid transparent;
+    border-top: 3px solid #FF79DA;
+    border-radius: 50%;
+    -webkit-animation: spin linear 3;
+    animation: spin linear 3;
+    content: ''; }
+
+.load::before {
+  height: 75px;
+  width: 75px;
+  top: 10px;
+  left: 10px;
+  animation-duration: 1.5s; }
+
+.load::after {
+  height: 50px;
+  width: 50px;
+  top: 22px;
+  left: 22px;
+  animation-duration: 1.5s; }
+
+.init {
+  opacity: 0;
+  -webkit-animation-name: loading;
+  animation-name: loading;
+  -webkit-animation-delay: 2s;
+  animation-delay: 2s;
+  -webkit-animation-duration: 0ms;
+  animation-duration: 0ms;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards; }
+
+.logo {
+  width: 70%;
+  font-family: Shrikhand, sans-serif;
+  text-align: center;
+  margin-left: 15%;
+  margin-top: 20px; }
+
+.accueil {
+  width: 100%;
+  background-color: #F2F2F2;
+  padding-bottom: 20px;
+  text-align: center; }
+  .accueil__location {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    background-color: #d9d9d9;
+    box-shadow: inset 0px 5px 0px rgba(0, 0, 0, 0.1); }
+    .accueil__location__titre {
+      font-size: 11px;
+      margin-left: 10px;
+      color: #737373; }
+  .accueil__titre {
+    width: 55%;
+    font-size: 14px;
+    margin-bottom: 20px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%); }
+    .accueil__titre > h1 {
+      font-family: Shrikhand, sans-serif;
+      font-size: 20px;
+      font-weight: bold; }
+  .accueil__soustitre {
+    width: 80%;
+    font-size: 10px;
+    margin-bottom: 20px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%); }
+    .accueil__soustitre > h2 {
+      font-weight: normal; }
+
+/*bloc principal de buttons nav*/
+.nav {
+  width: 100%; }
+  @media screen and (min-width: 998px) {
+    .nav {
+      height: 170px;
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+      flex-wrap: nowrap; }
+      .nav .nav__btn {
+        width: 80%; }
+      .nav .nav__btn--i {
+        position: relative;
+        left: 10%;
+        bottom: 1%;
+        z-index: 2; }
+      .nav span {
+        font-size: 12px; } }
+  @media screen and (min-width: 600px) {
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+      flex-wrap: nowrap; }
+      .nav .nav__btn {
+        width: 80%; }
+      .nav .nav__btn--i {
+        position: relative;
+        left: 10%;
+        bottom: 1%;
+        z-index: 2; } }
+  .nav__titre {
+    margin-left: 20px;
+    font-family: Shrikhand, sans-serif; }
+
+/*div des buttons nav et icons*/
+.c-nav {
+  width: 100%;
+  display: flex;
+  align-items: baseline; }
+
+.fpage {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  background: #333333;
+  text-align: left;
+  line-height: 1; }
+  .fpage .titre {
+    font-family: Shrikhand, sans-serif;
+    margin-left: 35px;
+    padding-top: 5px;
+    font-size: 14px;
+    color: #FFFFFF; }
+  .fpage .__links {
+    color: #FFFFFF;
+    font-size: 12px; }
+
+.links {
+  margin-bottom: 10px; }
+  .links i {
+    margin-right: 15px; }
+  .links a {
+    color: #FFFFFF; }
+
+/*buttons des plus menu  restaurant (la note enchantee)*/
 @media screen and (min-width: 998px) {
   .entrees {
     display: flex;
@@ -613,121 +718,10 @@ button {
     font-weight: normal;
     font-size: 12px; }
 
-.menu {
-  width: 90%; }
-
 @media screen and (min-width: 998px) {
   .menu-entree {
     width: 35%; }
     .menu-entree .restaurant__span {
       margin-right: 30px; } }
-
-.btn-rest {
-  width: 100%;
-  height: 70px;
-  overflow: hidden;
-  margin-left: 20px;
-  text-align: left;
-  background-color: #FFFFFF;
-  margin-bottom: 20px;
-  border-radius: 20px 20px 20px 20px;
-  line-height: 0.5;
-  position: relative;
-  z-index: 1; }
-  @media screen and (min-width: 998px) {
-    .btn-rest {
-      width: 90%; }
-      .btn-rest .restaurant__span {
-        margin-right: 30px;
-        font-size: 12px;
-        margin-left: 0; }
-      .btn-rest .p-cart {
-        width: 100%;
-        font-size: 12px;
-        text-align: left; } }
-  @media screen and (min-width: 600px) and (max-width: 997px) {
-    .btn-rest {
-      width: 60%;
-      position: relative;
-      left: 50%;
-      transform: translate(-50%); } }
-  .btn-rest__titre {
-    font-family: Roboto, sans-serif;
-    font-size: 14px;
-    margin-left: 10px;
-    font-weight: bold; }
-  @media screen and (max-width: 390px) {
-    .btn-rest:hover .p-cart {
-      width: 199px; }
-    .btn-rest:hover .cartalarga {
-      width: 6vh; }
-      .btn-rest:hover .cartalarga::before {
-        padding: 0;
-        margin: 0;
-        content: "...";
-        position: relative;
-        right: 5%;
-        opacity: 0;
-        transform-origin: 100%;
-        animation-name: points;
-        animation-delay: 750ms;
-        animation-timing-function: cubic-bezier(0.32, 0, 0.07, 1);
-        animation-fill-mode: forwards; } }
-  .btn-rest:hover .restaurant__span {
-    transform: translateX(-8.4vh); }
-  .btn-rest:hover .__check {
-    opacity: 1;
-    transform: translateX(-220%) rotate(360deg); }
-  .btn-rest:hover::after {
-    opacity: 1;
-    transform-origin: 100%;
-    transform: scaleX(0.197); }
-  .btn-rest::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin-left: 10px;
-    border-radius: 20px 20px 20px 20px;
-    background-color: #99E2D0;
-    opacity: 0;
-    z-index: 2;
-    transform: scaleX(0);
-    transform-origin: 100%;
-    transition: all 900ms cubic-bezier(0.32, 0, 0.07, 1); }
-
-svg {
-  width: 1.2rem; }
-
-.__check {
-  opacity: 0;
-  display: inline-block;
-  fill: #FFFFFF;
-  position: relative;
-  bottom: 15%;
-  left: 100%;
-  z-index: 3;
-  transition: all 900ms cubic-bezier(0.32, 0, 0.07, 1); }
-
-@keyframes points {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-.c--efect-btn {
-  animation-name: fadein;
-  animation-fill-mode: forwards;
-  animation-timing-function: cubic-bezier(0.19, -0.06, 0.79, 0.96);
-  opacity: 0; }
-  .c--efect-btn--1 {
-    animation-duration: 1000ms; }
-  .c--efect-btn--2 {
-    animation-delay: 1000ms;
-    animation-duration: 1000ms; }
-  .c--efect-btn--3 {
-    animation-delay: 2000ms;
-    animation-duration: 1000ms; }
 
 /*# sourceMappingURL=style.css.map */
