last vertion file

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,8 @@ ul {
 @keyframes loading {
   0% {
     opacity: 0; }
+  98% {
+    opacity: 0; }
   100% {
     opacity: 1; } }
 /*----animation des buttons de menu----*/
@@ -529,8 +531,8 @@ svg {
   border: 3px solid transparent;
   border-top: 3px solid #FF79DA;
   border-radius: 50%;
-  -webkit-animation: spin linear 3s;
-  animation: spin linear 3s;
+  -webkit-animation: spin linear 2;
+  animation: spin linear 2;
   -webkit-animation-duration: 1.5s;
   animation-duration: 1.5s; }
   .load::before, .load::after {
@@ -538,8 +540,8 @@ svg {
     border: 3px solid transparent;
     border-top: 3px solid #FF79DA;
     border-radius: 50%;
-    -webkit-animation: spin linear 3;
-    animation: spin linear 3;
+    -webkit-animation: spin linear 2;
+    animation: spin linear 2;
     content: ''; }
 
 .load::before {
@@ -557,13 +559,12 @@ svg {
   animation-duration: 1.5s; }
 
 .init {
-  opacity: 0;
+  opacity: 1;
   -webkit-animation-name: loading;
   animation-name: loading;
-  -webkit-animation-delay: 2s;
-  animation-delay: 2s;
-  -webkit-animation-duration: 0ms;
-  animation-duration: 0ms;
+  -webkit-animation-duration: 3s;
+  animation-duration: 3s;
+  animation-timing-function: ease-in;
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards; }
 
