--- a/public/Base/_animation.scss
+++ b/public/Base/_animation.scss
@@ -36,10 +36,14 @@
         
     }
     
+    98%{
+        opacity: 0;
+
+    }
     100%{
         opacity: 1;
-       
     }
+  
 }
 
 /*----animation des buttons de menu----*/
