changements d'ombre, titre épais, emplacement des entrées de menu

--- a/public/Layout/_nav.scss
+++ b/public/Layout/_nav.scss
@@ -7,6 +7,10 @@
         margin-left: 20px;
         font-family: $polices-titres;
     }
+
+}
+.navbtn{
+    font-size: 14px;
 }
 /*div des buttons nav et icons*/
 .c-nav{
