--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ ul {
   color: #FFFFFF;
   border: 0;
   background: linear-gradient(0deg, #a16be0, 60%, #FF79DA);
-  box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.2);
+  box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.5);
   border-radius: 20px/20px;
   transition: all 250ms; }
   @media screen and (min-width: 600px) {
@@ -124,7 +124,7 @@ ul {
     bottom: 0;
     left: 0;
     border-radius: 15px/15px;
-    background-color: #d7c0f2;
+    background-color: #f4eefc;
     opacity: 0;
     z-index: -1;
     transition: opacity 250ms; }
@@ -237,7 +237,6 @@ button {
     bottom: 0;
     left: 0;
     margin-left: 10px;
-    border-radius: 20px 20px 20px 20px;
     background-color: #99E2D0;
     opacity: 0;
     z-index: -1;
@@ -463,10 +462,10 @@ svg {
     justify-content: center;
     align-items: baseline; }
     .rest-cart__name h2 {
-      font-size: 2rem;
+      font-size: 1.9rem;
       font-family: Shrikhand, sans-serif;
       font-style: italic;
-      font-weight: bold;
+      font-weight: 900;
       margin-left: 5px;
       margin-right: 15px; }
     .rest-cart__name .ico {
@@ -535,6 +534,14 @@ svg {
   animation: spin linear 2;
   -webkit-animation-duration: 1.5s;
   animation-duration: 1.5s; }
+  @media screen and (min-width: 600px) {
+    .load {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: -25%;
+      opacity: 0; } }
   .load::before, .load::after {
     position: absolute;
     border: 3px solid transparent;
@@ -630,7 +637,7 @@ svg {
         bottom: 1%;
         z-index: 2; }
       .nav span {
-        font-size: 12px; } }
+        font-size: 14px; } }
   @media screen and (min-width: 600px) {
     .nav {
       display: flex;
@@ -647,6 +654,9 @@ svg {
   .nav__titre {
     margin-left: 20px;
     font-family: Shrikhand, sans-serif; }
+
+.navbtn {
+  font-size: 14px; }
 
 /*div des buttons nav et icons*/
 .c-nav {
@@ -714,7 +724,7 @@ svg {
 
 @media screen and (min-width: 998px) {
   .menu-entree {
-    width: 35%; }
+    width: 30%; }
     .menu-entree .restaurant__span {
       margin-right: 30px; } }
 
