--- a/public/Components/_buttons.scss
+++ b/public/Components/_buttons.scss
@@ -39,7 +39,7 @@ margin-bottom: 20px;
 border: 0 solid $background-nav-btn;
 border-radius: 15px/15px;
 text-align: center;
-@include boxshadow;
+box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.20);
 background-color: $background-menu;
 position: relative;
 left: 35%;
