--- a/public/Components/_card_rest.scss
+++ b/public/Components/_card_rest.scss
@@ -30,8 +30,8 @@
    &__titre{
        padding-top: 20px;
        margin-left: 20px;
-       font-family: $polices-titres;
-   }
+       font-family: $polices-titres;}
+    
    &--rest{
     width: 90%;
     display: flex;
@@ -167,10 +167,10 @@
         
 
         h2{
-            font-size: 2rem;
+            font-size: 1.9rem;
             font-family: $polices-titres;
             font-style: italic;
-            font-weight: bold;
+            font-weight: 900;
             margin-left: 5px;
             margin-right: 15px;
         }
