--- a/public/Utils/_mixin.scss
+++ b/public/Utils/_mixin.scss
@@ -28,7 +28,7 @@
 
     }
     span{
-        font-size: 12px;
+        font-size: 14px;
     }
     }
 }
@@ -95,7 +95,7 @@
 }
 @mixin btnentree{
     @media  screen and (min-width: 998px) {
-         width: 35%;
+         width: 30%;
          .restaurant__span{
              margin-right: 30px;}
             
@@ -175,7 +175,7 @@
     }
 }
 @mixin boxshadow{
-    box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.20);
+    box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.5);
 }
 @mixin efecthover {
     &::after {
@@ -186,7 +186,7 @@
         bottom: 0;
         left: 0;
         border-radius: 15px/15px;
-        background-color: lighten($color-primaire, 25%);
+        background-color: lighten($color-primaire, 36%);
         opacity:0;
         z-index: -1;
         transition: opacity 250ms;
@@ -202,7 +202,6 @@
         bottom: 0;
         left: 0;
         margin-left: 10px;
-        border-radius:$border-btn;
         background-color: #99E2D0;
         opacity:0;
         z-index: -1;
@@ -251,3 +250,16 @@
 @mixin btn-color {  
      background:linear-gradient(0deg,lighten($color-primaire,5),60%,$color-secondaire);
 }   
+
+@mixin spinner-desktop {
+    @media screen and (min-width: 600px) {
+        position: absolute;
+        top:0;
+        left: 0;
+        right: 0;
+        bottom: -25%;
+        opacity: 0;
+        }
+    
+    
+}
